# Meridian-X

./: .env.example  .geminiignore  .gitignore  .tool-versions  CLAUDE.md  GEMINI.md  README.md  ROADMAP.md  main.py  organize_media.py  pyproject.toml  requirements.txt
.ai/: AGENTS.md
.github/workflows/: security-scan.yml
East/Molester/: package-lock.json
config/: settings.json.example
docs/plans/: 2026-04-03-security-scan-design.md  2026-04-03-security-scan-implementation.md
docs/superpowers/plans/: 2026-06-08-multi-source-implementation-plan.md  2026-06-08-transmission-rpc-integration-plan.md
docs/superpowers/specs/: 2026-06-08-multi-source-architecture-design.md  2026-06-08-transmission-rpc-integration-design.md
src/meridian_x/: __init__.py  classify.py  cli.py  collect.py  core.py  fanza.py  jellyfin.py  report.py  tidy.py  transmission.py
src/meridian_x/sources/: __init__.py  onejav.py  xxxclub.py
tests/: test_simulation_classify.py  test_transmission.py
