[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meridian-x"
version = "0.2.0"
description = "소중한 미디어 컬렉션을 완벽하게 관리하는 품격 있는 자동화 큐레이션 솔루션."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["requests", "python-dotenv"]

[project.scripts]
meridian = "meridian_x.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/meridian_x"]
